@@ -1,9 +1,3 @@
-[submodule "mypaint-brushes"]
-	path = mypaint-brushes
-	url = https://github.com/mypaint/mypaint-brushes.git
-[submodule "libmypaint"]
-	path = libmypaint
-	url = https://github.com/mypaint/libmypaint.git
 [submodule "build-aux/flatpak/shared-modules"]
 	path = build-aux/flatpak/shared-modules
 	url = https://github.com/flathub/shared-modules.git
