@@ -15,48 +15,50 @@ echo "Starting build script for Glimpse Image Editor."
 
 mkdir -p $INSTALL_PREFIX
 mkdir -p $INSTALL_PREFIX/share/aclocal
-rm -rf $SRC_REFIX/babl
-rm -rf $SRC_PREFIX/gegl
+rm -rf $HOME/babl $HOME/mypaint-brushes $HOME/libmypaint $HOME/gegl
 
-echo "Cloning submodules in $SRC_PREFIX..."
-cd $SRC_PREFIX
-git submodule update --init
-git clone https://gitlab.gnome.org/GNOME/babl.git $SRC_PREFIX/babl
-git clone https://gitlab.gnome.org/GNOME/gegl.git $SRC_PREFIX/gegl
+echo "Cloning submodules in $HOME..."
+cd $HOME
+git clone https://gitlab.gnome.org/GNOME/babl.git $HOME/babl
+git clone https://github.com/mypaint/mypaint-brushes.git $HOME/mypaint-brushes
+git clone https://github.com/mypaint/libmypaint.git $HOME/libmypaint
+git clone https://gitlab.gnome.org/GNOME/gegl.git $HOME/gegl
 
-echo "Building BABL in $SRC_PREFIX..."
-cd $SRC_PREFIX/babl
-git checkout BABL_0_1_74
+echo "Building BABL in $HOME..."
+cd $HOME/babl
+git checkout BABL_0_1_78
 meson builddir --prefix=$INSTALL_PREFIX --buildtype=release -Db_lto=true -Dwith-docs=false
-cd $SRC_PREFIX/babl/builddir
+cd $HOME/babl/builddir
 ninja
 ninja install
 
-echo "Building mypaint-brushes in $SRC_PREFIX..."
-cd $SRC_PREFIX/mypaint-brushes
+echo "Building mypaint-brushes in $HOME..."
+cd $HOME/mypaint-brushes
+git checkout v2.0.2
 ./autogen.sh --prefix=$INSTALL_PREFIX
 ./configure --prefix=$INSTALL_PREFIX
 make
 make install
 
-echo "Building libmypaint in $SRC_PREFIX..."
-cd $SRC_PREFIX/libmypaint
+echo "Building libmypaint in $HOME..."
+cd $HOME/libmypaint
+git checkout v1.5.1
 ./autogen.sh --prefix=$INSTALL_PREFIX
 ./configure --prefix=$INSTALL_PREFIX
 make
 make install
 
-echo "Building GEGL in $SRC_PREFIX..."
-cd $SRC_PREFIX/gegl
+echo "Building GEGL in $HOME..."
+cd $HOME/gegl
 git checkout GEGL_0_4_22
 meson builddir --prefix=$INSTALL_PREFIX --buildtype=release -Db_lto=true -Ddocs=false
-cd $SRC_PREFIX/gegl/builddir
+cd $HOME/gegl/builddir
 ninja
 ninja install
 
 echo "Building Glimpse in $SRC_PREFIX..."
 cd $SRC_PREFIX
-./autogen.sh --prefix=$INSTALL_PREFIX --disable-gtk-doc
+./autogen.sh --prefix=$INSTALL_PREFIX --disable-gtk-doc --disable-python
 make
 make install
 
