@@ -9,10 +9,13 @@ Otherwise, this branch is only for bug-fixes.
 
 Overview of Changes in Glimpse 0.1.9
 ====================================
-* Uplifted BABL version from 0.1.68 to 0.1.74
+* Uplifted BABL version from 0.1.68 to 0.1.78
+* Uplifted Mypaint-Brushes from 1.3.0 to 2.0.2
+* Uplifted LibMyPaint from 1.3.0 to 1.5.1
 * Uplifted GEGL version from 0.4.16 to 0.4.22
 * Uplifted GNU Image Manipulation Program base from 2.10.12 to 2.10.18
 * Updated `HACKING` and GEGL/BABL build jobs to use new `meson` build process
+* Removed git submodules previously provided for convenience only
 * Moved Vagrant support files into a dedicated folder in `build-aux` directory
 * Updated Vagrant build process to use 2GB RAM, 2 CPUs and new `meson` builds
 * Updated the `README.MD` file with more current information
